* BUG#8912 Error when processing dunning termination before initial start date if dunning configured with termination at_dunning_effective_date

Version 2.0 - 2018-04-13
* OTH#0000 Fix to unblock the period computation for the prepayment computation
* FEA#8214 Default termination mode for contract in dunning level configuration is set to 'At dunning effective date'
* FEA#7655 Improve performances of dunning treatment batch
* BUG#6932 Keep initial maturity date if dunning procedure is based on payment date

Version 1.14 - 2017-11-09
* FEA#7097 Add default dunning procedure
* BUG#6617 Void contracts that were never paid

Version 1.12 - 2017-04-28
* FEA#0000 Add termination mode at dunning effective date
* FEA#0000 Deactivate terminated contract's dunnings
* FEA#0000 Set void state on a contract in case an unpaid premium event occurs before the contract start date

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Allow to define maturity date from payment date
* FEA#0000 Add dunning fee

Version 1.6 - 2015-12-23
* FEA#0000 Manage hold_invoice action

Version 1.4 - 2015-05-29
* FEA#0000 Module Creation