@@ -354,14 +354,19 @@ bool(contract.billing_information.direct_debit_day) is True
 
 ContractInvoice = Model.get('contract.invoice')
 Contract.first_invoice([contract.id], config.context)
+
+config._context['client_defined_date'] = two_months_ago
 first_invoice = ContractInvoice.find(
     [('contract', '=', contract.id)],
     order=[('start', 'ASC')])[0]
 
-config._context['client_defined_date'] = two_months_ago
 first_invoice.invoice.click('post')
 
 config._context['client_defined_date'] = today
+
+first_invoice = ContractInvoice.find(
+    [('contract', '=', contract.id)],
+    order=[('start', 'ASC')])[0]
 
 assert all(x.maturity_date == x.payment_date
     for x in first_invoice.invoice.lines_to_pay)
