@@ -1,3 +1,4 @@
+* OTH#0000 Correction du scenario de test suite au merge 4.8
 * BUG#8912 Crash lorsque l'on résilie pour contentieux alors que le contrat n'a pas pris effet si l'option "résilié à la date de traitement" est définie dans le paramétrage du schéma de relance.
 
 Version 2.0 - 2018-04-13
