@@ -1,3 +1,4 @@
+* OTH#0000 Fix test scenario following merge 4.8
 * BUG#8912 Error when processing dunning termination before initial start date if dunning configured with termination at_dunning_effective_date
 
 Version 2.0 - 2018-04-13
